	* Fixed yet another bug with hyperlinks  
	* Fixed a bug in the lexer (with line labels)   
	* Fixed another bug in the lexer with the '"' character inside comments    
	* Added separate color preferences for 'let','in' and 'fun','function' keywords
	* Added optional syntax coloring of punctuation 
	* Corrected a bug in the paths preference page on Windows
	* Added '*.obj' and '_build' in the list of navigator filters 
	* Hid some resources from versioning system (*.cmo, *.annot, ...). If you ever need to commit these resources, see "Window > Preferences > Team > Ignored Resources".   
	 
* 1.1.1 (August 21 2007) 
	* New menu action for opening the currently opened file counterpart (interface/implementation)
	* Support for camlp4 preprocessing 	
	
* 1.2.0
	* Code formatter rewrite
	* Replaced build "N°" by corresponding Unicode character (as suggested by Ben Liblit)
	* Removed unnecessary protection tokenization of ocamlbuild paths, which caused problems
	* Use parsed ml files in completion when there is no corresponding mli file
	* Removed the underscore from colorized punctuation characters
	* User setting for disabling automatic completion
	* Changed a regular expression which was causing stack overflows on big inputs
	* Interface files are now parsed with a real parser, instead of the old fuzzy one
	* In the toplevel, Ctrl+Enter always evaluates the expression, even when it is not terminated with ";;". This is useful to answer input queries.
	* Changed the terminal type for toplevel, so that it doesn't try to send formatting characters  
	* The debugger is now passed the paths defined for the project 
	* Commenting and uncommenting of code blocks in the editor (protected and not protected)
	* Integrated a patch for OMake support contributed by Dmitry Bely
	* Replaced Unix newlines by platform newlines
	* Optimized an often used function
	* Added 'insert spaces instead of tabulations' option for the O'Caml editor
	
	
	
	
	